--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Selector</title>
     <style>
         p{
-            color: blue;
+            color: rgb(11, 3, 74);
             font-size: x-large;
             text-align: justify;
         }
