Cambio en div-clase

--- a/selectorClase.html
+++ b/selectorClase.html
@@ -14,7 +14,7 @@
     </style>
 </head>
 <body>
-    <div>
+    <div class="contenido">
         <p>Este es un párrafo dentro de un contenedor con la clase contenido</p>
     </div>
     <p>Este párrafo no tiene estilo</p>
