--- a/selectorAtributo.html
+++ b/selectorAtributo.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Selector de atributos.</title>
+    <style>
+        a[target="_blank"]{
+            color: green;
+            text-decoration: none;
+
+        }
+    </style>
+    
 </head>
 <body>
     <a href="https://www.unilibre.edu.co">Enlace que abre en una nueva pestaña.</a>
