--- a/selectorAtributo.html
+++ b/selectorAtributo.html
@@ -14,6 +14,6 @@
     
 </head>
 <body>
-    <a href="https://www.unilibre.edu.co">Enlace que abre en una nueva pestaña.</a>
+    <a href="https://www.unilibre.edu.co" target="-blank">Enlace que abre en una nueva pestaña.</a>
 </body>
 </html>
