--- a/lab9.html
+++ b/lab9.html
@@ -16,12 +16,12 @@
         <a href="#">Productos</a>
         <a href="#">Contacto</a>
     </nav>
-    <main>
-        <div>
+    <main >
+        <div class="contenedor">
             <h2>Bienvenios</h2>
             <p>Este es es un ejemplo de como aplicar estilos a textos y contenedores, en una página web.</p>
         </div>
-        <div>
+        <div class="contenedor">
             <h2>Acerca de</h2>
             <p>Utilizamos css para mejorar la presentación y hacer el contenido mas atractivo.</p>
         </div>
