cambio contenedor estilos

--- a/lab9.html
+++ b/lab9.html
@@ -18,7 +18,7 @@
     </nav>
     <main >
         <div class="contenedor">
-            <h2>Bienvenios</h2>
+            <h2>Bienvenidos!!!</h2>
             <p>Este es es un ejemplo de como aplicar estilos a textos y contenedores, en una página web.</p>
         </div>
         <div class="contenedor">
